--- a/docs/coco-generic/coco-experimental-setup/hal-arxiv/coco-experimental-setup.tex
+++ b/docs/coco-generic/coco-experimental-setup/hal-arxiv/coco-experimental-setup.tex
@@ -19,6 +19,8 @@
 \SetupFloatingEnvironment{literal-block}{name=Listing }
 
 
+  \pdfoutput=1
+  \usepackage{cmap}
   \usepackage{amssymb}
   \pagestyle{plain}
   \newcommand{\chapter}[1]{}  % hack to be able to use article documentclass
@@ -32,10 +34,10 @@
 
 
 \title{{COCO}: The Experimental Procedure}
-\date{March 27, 2016}
+\date{May 19, 2016}
 \release{0.9}
-\author{Nikolaus Hansen$^{1,2}$, 
-      Tea Tusar$^3$, 
+\date{\vspace{-1ex}}\author{Nikolaus Hansen$^{1,2}$, 
+      Tea Tu\v{s}ar$^3$, 
       Olaf Mersmann$^4$, 
       Anne Auger$^{1,2}$, 
       Dimo Brockhoff$^3$
@@ -154,30 +156,27 @@
 \begin{document}
 
 \maketitle
-%\tableofcontents
+%\tableofcontents %git:rev-736-fdb311f
 \phantomsection\label{index::doc}
 
 
 
 \chapter{CHAPTERTITLE}
-\label{index:coco-experimental-procedure}\label{index:chaptertitle}% %\tableofcontents is automatic with sphinx and moved behind abstract by swap...py
+\label{index:coco-the-experimental-procedure}\label{index:chaptertitle}% %\tableofcontents %git:rev-736-fdb311f is automatic with sphinx and moved behind abstract by swap...py
 \begin{abstract}
-We present an experimental setup and procedure for benchmarking numerical
-optimization algorithms in a black-box scenario. This procedure can be
-applied with the \href{https://github.com/numbbo/coco}{COCO} benchmarking platform.
-We describe initialization of and input to the algorithm and touch
-upon the relevance of termination and restarts.
-We introduce the concept of recommendations for benchmarking with \href{https://github.com/numbbo/coco}{COCO}.
-Recommendations detach the solutions used in function calls from the any-time
-performance assessment of the algorithm.
-\end{abstract}\tableofcontents
+We present a budget-free experimental setup and procedure for benchmarking numerical
+optimization algorithms in a black-box scenario.
+This procedure can be applied with the \href{https://github.com/numbbo/coco}{COCO} benchmarking platform.
+We describe initialization of and input to the algorithm and touch upon the
+relevance of termination and restarts.
+\end{abstract}\tableofcontents %git:rev-736-fdb311f
 \newpage
 
 \section{Introduction}
 \label{index:introduction}
 Based on \phantomsection\label{index:id4}{\hyperref[index:han2009]{\emph{{[}HAN2009{]}}}} and \phantomsection\label{index:id5}{\hyperref[index:han2010]{\emph{{[}HAN2010{]}}}}, we describe a comparatively simple experimental
-set-up for \emph{black-box optimization benchmarking}. We recommend to use this procedure
-within the \href{https://github.com/numbbo/coco}{COCO} platform \phantomsection\label{index:id6}{\hyperref[index:han2016co]{\emph{{[}HAN2016co{]}}}}. \footnote[1]{
+setup for \emph{black-box optimization benchmarking}. We recommend to use this procedure
+within the \href{https://github.com/numbbo/coco}{COCO} platform \phantomsection\label{index:id6}{\hyperref[index:han2016co]{\emph{{[}HAN2016co{]}}}}.\footnote[1]{
 The \href{https://github.com/numbbo/coco}{COCO} platform provides
 several (single and bi-objective) \emph{test suites} with a collection of
 black-box optimization problems of different dimensions to be
@@ -185,16 +184,16 @@ minimized. \href{https://github.com/numbbo/coco}{COCO} automatically collects th
 the performance results after a post-processing is applied.
 }
 
-Our central measure of performance, to which the experimental procedure is
-adapted, is the number of evaluations of the objective function to reach a
+Our \textbf{central measure of performance}, to which the experimental procedure is
+adapted, is the number of calls to the objective function to reach a
 certain solution quality (function value or \(f\)-value or indicator
-value), also denoted as \emph{runtime}.
+value), also denoted as runtime.
 
 
 \subsection{Terminology}
 \label{index:terminology}\begin{description}
 \item[{\emph{function}}] \leavevmode
-We talk about a \emph{function} as a parametrized mapping
+We talk about an objective \emph{function} \(f\) as a parametrized mapping
 \(\mathbb{R}^n\to\mathbb{R}^m\) with scalable input space, that is,
 \(n\) is not (yet) determined, and usually \(m\in\{1,2\}\).
 Functions are parametrized such that different \emph{instances} of the
@@ -215,7 +214,7 @@ We define \emph{runtime}, or \emph{run-length} \phantomsection\label{index:id8}{
 as the \emph{number of evaluations}
 conducted on a given problem, also referred to as number of \emph{function} evaluations.
 Our central performance measure is the runtime until a given target value
-is hit \phantomsection\label{index:id9}{\hyperref[index:cocoperf]{\emph{{[}CocoPerf{]}}}}.
+is hit \phantomsection\label{index:id9}{\hyperref[index:han2016perf]{\emph{{[}HAN2016perf{]}}}}.
 
 \item[{\emph{suite}}] \leavevmode
 A test- or benchmark-suite is a collection of problems, typically between
@@ -230,14 +229,17 @@ The optimization algorithm to be benchmarked is run on each problem of the
 given test suite once. On each problem, the very same algorithm with the same
 parameter setting, the same initialzation procedure, the same budget, the same
 termination and/or restart criteria etc. is used.
-There is no prescribed minimal or maximally allowed budget. The longer the
-experiment, the more data are available to assess the performance accurately.
+There is no prescribed minimal or maximal allowed budget, the benchmarking
+setup is \emph{budget-free}.
+The longer the experiment, the more data are available to assess the performance
+accurately.
 See also Section {\hyperref[index:sec\string-budget]{\emph{Budget, Termination Criteria, and Restarts}}}.
 
 
 \subsection{Initialization and Input to the Algorithm}
 \label{index:initialization-and-input-to-the-algorithm}\label{index:sec-input}
-An algorithm can use the following input information from each problem. For initialization:
+An algorithm can use the following input information from each problem.
+At any time:
 \begin{description}
 \item[{\emph{Input and output dimensions}}] \leavevmode
 as a defining interface to the problem, specifically:
@@ -260,9 +262,7 @@ one or more constraints.
 \end{itemize}
 
 \item[{\emph{Search domain of interest}}] \leavevmode
-defined from \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a29c89e039494ae8b4f8e520cba1eb154}{\code{coco\_problem\_get\_largest\_values\_of\_interest}} and \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a4ea6c067adfa866b0179329fe9b7c458}{\code{coco\_problem\_get\_smallest\_values\_of\_interest}}. The optimum (or each extremal solution of the Pareto set) lies within the search domain of interest. If the optimizer operates on a bounded domain only, the domain of interest can be interpreted as lower and upper bounds \footnote[2]{
-Note, however, that the Pareto set in the bi-objective case is not always guaranteed to lie in its entirety within the region of interest.
-}.
+defined from \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a29c89e039494ae8b4f8e520cba1eb154}{\code{coco\_problem\_get\_largest\_values\_of\_interest}} and \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a4ea6c067adfa866b0179329fe9b7c458}{\code{coco\_problem\_get\_smallest\_values\_of\_interest}}. The optimum (or each extremal solution of the Pareto set) lies within the search domain of interest. If the optimizer operates on a bounded domain only, the domain of interest can be interpreted as lower and upper bounds.
 
 \item[{\emph{Feasible (initial) solution}}] \leavevmode
 provided by \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#ac5a44845acfadd7c5cccb9900a566b32}{\code{coco\_problem\_get\_initial\_solution}}.
@@ -281,7 +281,7 @@ During an optimization run, the following (new) information is available to
 the algorithm:
 \begin{enumerate}
 \item {} 
-The result, i.e. the \(f\)-value(s), from evaluating the problem
+The result, i.e., the \(f\)-value(s) from evaluating the problem
 at a given search point
 via \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#aabbc02b57084ab069c37e1c27426b95c}{\code{coco\_evaluate\_function}}.
 
@@ -299,7 +299,7 @@ function returns always zero.
 
 The number of evaluations of the problem and/or constraints are the search
 costs, also referred to as \emph{runtime}, and used for the performance
-assessment of the algorithm. \footnote[3]{
+assessment of the algorithm.\footnote[2]{
 \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a6ad88cdba2ffd15847346d594974067f}{\code{coco\_problem\_get\_evaluations(const coco\_problem\_t * problem)}} is a
 convenience function that returns the number of evaluations done on \code{problem}.
 Because this information is available to the optimization algorithm anyway,
@@ -309,35 +309,29 @@ the convenience function might be used additionally.
 
 \subsection{Budget, Termination Criteria, and Restarts}
 \label{index:sec-budget}\label{index:budget-termination-criteria-and-restarts}
-We consider the budget, termination criteria, and restarts to be part of the
-benchmarked algorithm. Algorithms with any budget of function evaluations are eligible.
+Algorithms and/or setups with any budget of function evaluations are
+eligible, the benchmarking setup is \emph{budget-free}.
+We consider termination criteria to be part of the benchmarked algorithm.
 The choice of termination is a relevant part of the algorithm.
-On the one hand, allowing a larger number of function evaluations increases the chance to achieve better function values. On the other hand, a timely
-termination of a stagnating run can improve the performance, as these evaluations
-can be used more effectively. \footnote[4]{
-In the single objective case care should be
-taken to apply termination conditions that allow to hit the final target on
-the most basic functions, like the sphere function \(f_1\), that is on the
-problems 0, 360, 720, 1080, 1440, and 1800 of the \code{bbob} suite.
-}
+On the one hand, allowing a larger number of function evaluations increases the chance to find solutions with better quality. On the other hand, a timely
+termination of stagnating runs can improve the performance, as these evaluations
+can be used more effectively.
 
-To exploit a large number of function evaluations effectively, we encourage to
-use independent restarts \footnote[5]{
-The \href{https://github.com/numbbo/coco}{COCO} platform provides example code to implement independent restarts.
+To exploit a large(r) number of function evaluations effectively, we encourage to
+use \textbf{independent restarts}\footnote[3]{
+The \href{https://github.com/numbbo/coco}{COCO} platform provides example code implementing independent restarts.
 }, in particular for algorithms which terminate
-naturally within a comparatively small budget. Independent restarts do not
-change the central performance measure \footnote[6]{
-Therefore we call the experimental approach budget-free. This claim
-however makes the assumption that the runtime distribution is the same on all
-instances of a function in a given dimension. This assumption cannot be
-proven in general and might be violated in some cases for some algorithms.
-}, however, they improve the reliability, comparability \footnote[7]{
+naturally within a comparatively small budget.
+Independent restarts are a natural way to approach difficult optimization
+problems and do not change the central performance measure used in \href{https://github.com/numbbo/coco}{COCO} (hence it is budget-free),
+however,
+independent restarts improve the reliability, comparability\footnote[4]{
 Algorithms are only comparable up to the smallest budget given to
 any of them.
 }, precision, and ``visibility'' of the measured results.
 
-Moreover, any multistart procedure (which relies on an interim termination of the algorithm) is encouraged.
-Multistarts may not be independent as they can feature a parameter sweep (e.g., increasing population size \phantomsection\label{index:id19}{\hyperref[index:har1999]{\emph{{[}HAR1999{]}}}} \phantomsection\label{index:id20}{\hyperref[index:aug2005]{\emph{{[}AUG2005{]}}}}) or can be based on the outcome of the previous starts.
+Moreover, any \textbf{multistart procedure} (which relies on an interim termination of the algorithm) is encouraged.
+Multistarts may not be independent as they can feature a parameter sweep (e.g., increasing population size \phantomsection\label{index:id15}{\hyperref[index:har1999]{\emph{{[}HAR1999{]}}}} \phantomsection\label{index:id16}{\hyperref[index:aug2005]{\emph{{[}AUG2005{]}}}}), can be based on the outcome of the previous starts, and/or feature a systematic change of the initial conditions for the algorithm.
 
 After a multistart procedure has been established, a recommended procedure is
 to use a budget proportional to the dimension, \(k\times n\), and run
@@ -346,7 +340,7 @@ repeated experiments with increase \(k\), e.g. like
 availability of the latest results and computational overhead.
 
 An algorithm can be conclusively terminated if
-\href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a1164d85fd641ca48046b943344ae9069}{\code{coco\_problem\_final\_target\_hit}} returns 1. \footnote[8]{
+\href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#a1164d85fd641ca48046b943344ae9069}{\code{coco\_problem\_final\_target\_hit}} returns 1.\footnote[5]{
 For the \code{bbob-biobj} suite this is however currently never the case.
 } This saves CPU cycles without
 affecting the performance assessment, because there is no target left to hit.
@@ -355,8 +349,24 @@ affecting the performance assessment, because there is no target left to hit.
 \section{Parameter Setting and Tuning of Algorithms}
 \label{index:sec-tuning}\label{index:parameter-setting-and-tuning-of-algorithms}
 Any tuning of algorithm parameters to the test suite should be described and
-the approximate overall number of tested parameter settings or algorithm
-variants and the approximate overall invested budget should be given.
+\emph{the approximate overall number of tested parameter settings or algorithm
+variants and the approximate overall invested budget should be given}.
+
+The only recommended tuning procedure is the verification that \textbf{termination
+conditions} of the algorithm are suited to the given testbed and, in case,
+tuning of termination parameters.\footnote[6]{
+For example in the single objective case, care should be
+taken to apply termination conditions that allow to hit the final target on
+the most basic functions, like the sphere function \(f_1\), that is on the
+problems 0, 360, 720, 1080, 1440, and 1800 of the \code{bbob} suite.
+
+In our experience, numerical optimization software frequently terminates
+too early by default, while evolutionary computation software often
+terminates too late by default.
+}
+Too early or too late termination can be identified and adjusted comparatively
+easy.
+This is also a useful prerequisite for allowing restarts to become more effective.
 
 On all functions the very same parameter setting must be used (which might
 well depend on the dimensionality, see Section {\hyperref[index:sec\string-input]{\emph{Initialization and Input to the Algorithm}}}). That means,
@@ -366,39 +376,15 @@ separability, multi-modality, ...) cannot be considered as input parameter to
 the algorithm.
 
 On the other hand, benchmarking different parameter settings as ``different
-algorithms'' on an entire test suite is encouraged.
-
-
-\section{Recommendations}
-\label{index:sec-recommendations}\label{index:recommendations}
-The performance assessment is based on a set of evaluation counts
-associated with the \(f\)-value or -vector of a solution.
-By default, each evaluation count is associated with the respectively \emph{evaluated}
-solution and hence its \(f\)-value.
-The solution associated \emph{to the current (last) evaluation} can be changed by calling \href{http://numbbo.github.io/coco-doc/C/coco\_8h.html\#afd76a19eddd49fb78c22563390437df2}{\code{coco\_recommend\_solution}}, thereby associating the \(f\)-value of the
-\emph{recommended} solution (instead of the \emph{evaluated} solution) with the current evaluation count.
-A recommendation is best viewed as the \emph{currently best known approximation} of the
-optimum \footnote[9]{
-In the multi-objective scenario not only the last solution, but \emph{all}
-solutions are taken into account for this approximation.
-In the noisy scenario, a small number of the most current solutions will be
-taken into account in future assessements.
-} delivered by the optimization algorithm, or as the currently most
-desirable return value of the algorithm.
-
-Recommendations allow the algorithm to explore solutions without affecting the
-performance assessment. For example, a surrogate-based algorithm can explore
-(i.e. evaluate) an arbitrarily bad solution, update the surrogate model and
-then recommend the (new) model optimizer. On non-noisy suites it is neither
-necessary nor advantageous to recommend the same solution repeatedly.
+algorithms'' on the entire test suite is encouraged.
 
 
 \section{Time Complexity Experiment}
 \label{index:time-complexity-experiment}
-In order to get a rough measurement of the time complexity of the algorithm,
-the wall-clock or CPU time should be measured when running the algorithm on
-the benchmark suite. The chosen setup should reflect a ``realistic average
-scenario''. \footnote[10]{
+In order to get a rough measurement of the time complexity of the algorithm, the
+wall-clock or CPU time should be measured when running the algorithm on the
+benchmark suite. The chosen setup should reflect a ``realistic average
+scenario''.\footnote[7]{
 The example experiment code provides the timing output measured over all
 problems of a single dimension by default. It also can be used to make a record
 of the same timing experiment with ``pure random search'', which can serve as
@@ -406,24 +392,26 @@ additional base-line data. On the \code{bbob} test suite, also only the
 first instance of the Rosenbrock function \(f_8\) had been used for this
 experiment previously, that is, the suite indices 105, 465, 825, 1185, 1545,
 1905.
-} The \textbf{time divided by the number of function evaluations shall be
-presented separately for each dimension}. The chosen setup, coding language, compiler and
-computational architecture for conducting these experiments are to be described.
+}
+The \emph{time divided by the number of function evaluations shall be presented
+separately for each dimension}. The chosen setup, coding language, compiler and
+computational architecture for conducting these experiments should be given.
 \section*{Acknowledgments}
 The authors would like to thank Raymond Ros, Steffen Finck, Marc Schoenauer,
-Petr Posik and Dejan Tusar for their many invaluable contributions to this work.
+Petr Posik and Dejan Tušar for their many invaluable contributions to this work.
 
-The authors also acknowledge support by the grant ANR-12-MONU-0009 (NumBBO)
+This work was support by the grant ANR-12-MONU-0009 (NumBBO)
 of the French National Research Agency.
 
-\begin{thebibliography}{HAN2016co}
+\begin{thebibliography}{HAN2016perf}
 \bibitem[AUG2005]{AUG2005}{\phantomsection\label{index:aug2005} 
 A. Auger and N. Hansen. A restart CMA evolution strategy with
 increasing population size. In \emph{Proceedings of the IEEE Congress on
 Evolutionary Computation (CEC 2005)}, pages 1769--1776. IEEE Press, 2005.
 }
-\bibitem[CocoPerf]{CocoPerf}{\phantomsection\label{index:cocoperf} 
-The BBOBies (2016). COCO: \href{http://numbbo.github.io/coco-doc/perf-assessment/}{Performance Assessment}.
+\bibitem[HAN2016perf]{HAN2016perf}{\phantomsection\label{index:han2016perf} 
+N. Hansen, A. Auger, D. Brockhoff, D. Tušar, T. Tušar.
+\href{http://numbbo.github.io/coco-doc/perf-assessment}{COCO: Performance Assessment}. \emph{ArXiv e-prints}, \href{http://arxiv.org/abs/1605.03560}{arXiv:1605.03560}, 2016.
 }
 \bibitem[HAN2009]{HAN2009}{\phantomsection\label{index:han2009} 
 N. Hansen, A. Auger, S. Finck, and R. Ros.
@@ -434,9 +422,9 @@ N. Hansen, A. Auger, S. Finck, and R. Ros.
 Real-Parameter Black-Box Optimization Benchmarking 2010: Experimental Setup, \emph{Inria Research Report} RR-7215 \href{http://hal.inria.fr/inria-00362649/en}{http://hal.inria.fr/inria-00362649/en}, 2010.
 }
 \bibitem[HAN2016co]{HAN2016co}{\phantomsection\label{index:han2016co} 
-N. Hansen, A. Auger, O. Mersmann, T. Tusar, D. Brockhoff (2016).
+N. Hansen, A. Auger, O. Mersmann, T. Tušar, D. Brockhoff.
 \href{http://numbbo.github.io/coco-doc/}{COCO: A Platform for Comparing Continuous Optimizers in a Black-Box
-Setting}.
+Setting}, \emph{ArXiv e-prints}, \href{http://arxiv.org/abs/1603.08785}{arXiv:1603.08785}, 2016.
 }
 \bibitem[HAR1999]{HAR1999}{\phantomsection\label{index:har1999} 
 G.R. Harik and F.G. Lobo. A parameter-less genetic
