--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -245,32 +245,32 @@ of overall function evaluations for any unsuccessful trial under consideration.
 \begin{figure*}
 \centering
 \begin{tabular}{@{}c@{}c@{}c@{}c@{}}
-\includegraphics[width=0.253\textwidth, trim= 0.7cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f001}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f002}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f003}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f004}\\
-\includegraphics[width=0.253\textwidth, trim= 0.7cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f005}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f006}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f007}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f008}\\
-\includegraphics[width=0.253\textwidth, trim= 0.7cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f009}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f010}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f011}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f012}\\
-\includegraphics[width=0.253\textwidth, trim= 0.7cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f013}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f014}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f015}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f016}\\
-\includegraphics[width=0.253\textwidth, trim= 0.7cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f017}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f018}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f019}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.8cm 0.5cm 0.5cm, clip]{ppfigs_f020}\\
-\includegraphics[width=0.253\textwidth, trim= 0.7cm 0.0cm 0.5cm 0.5cm, clip]{ppfigs_f021}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.0cm 0.5cm 0.5cm, clip]{ppfigs_f022}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.0cm 0.5cm 0.5cm, clip]{ppfigs_f023}&
-\includegraphics[width=0.238\textwidth, trim= 1.8cm 0.0cm 0.5cm 0.5cm, clip]{ppfigs_f024}
+\includegraphics[width=0.24\textwidth]{ppfigs_f001}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f002}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f003}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f004}\\[-0.25em]
+\includegraphics[width=0.24\textwidth]{ppfigs_f005}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f006}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f007}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f008}\\[-0.25em]
+\includegraphics[width=0.24\textwidth]{ppfigs_f009}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f010}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f011}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f012}\\[-0.25em]
+\includegraphics[width=0.24\textwidth]{ppfigs_f013}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f014}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f015}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f016}\\[-0.25em]
+\includegraphics[width=0.24\textwidth]{ppfigs_f017}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f018}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f019}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f020}\\[-0.25em]
+\includegraphics[width=0.24\textwidth]{ppfigs_f021}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f022}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f023}&
+\includegraphics[width=0.24\textwidth]{ppfigs_f024}
 \end{tabular}
-\vspace*{-0.2cm}
+\vspace*{-0.3cm}
 \caption[Expected running time divided by dimension versus dimension]{
 \label{fig:scaling}
 \bbobppfigslegend{$f_1$ and $f_{24}$}.  % note: \algorithmA and \algorithmB can be defined above
@@ -298,54 +298,30 @@ of overall function evaluations for any unsuccessful trial under consideration.
 
 \begin{figure*}
 \begin{tabular}{*{4}{@{}c@{}}}
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 1 Sphere\hfill~}\end{turn}
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f001}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 2 Ellipsoid separable\hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f002}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 3 Rastrigin separable\hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f003}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 4 Skew Rastrigin-Bueche\hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f004}\\[-2.2ex]
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 5 Linear slope \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f005}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 6 Attractive sector \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f006}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 7 Step-ellipsoid \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f007}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 8 Rosenbrock original \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f008}\\[-2.2ex]
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 9 Rosenbrock rotated \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f009}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 10 Ellipsoid \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f010}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 11 Discus \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f011}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 12 Bent cigar \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f012}\\[-2.2ex]
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 13 Sharp ridge \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f013}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf~~14 Sum of diff.\ powers \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f014}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 15 Rastrigin \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f015}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 16 Weierstrass \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f016}\\[-2.2ex]
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 17 Schaffer F7, cond.10 \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f017}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 18 Schaffer F7, cond.1000 \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f018}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 19 Griewank-Rosenbrock \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f019}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 20 Schwefel x*sin(x) \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f020}\\[-2.2ex]
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 21 Gallagher 101 peaks \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f021}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 22 Gallagher 21 peaks \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f022}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 23 Katsuuras \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f023}&
-\begin{turn}{90}\parbox{0.21\textwidth}{\hfill\sf 24 Lunacek bi-Rastrigin \hfill~}\end{turn} 
-    \includegraphics[height=0.21\textwidth, trim= 37mm 0mm 20mm 9mm, clip]{ppscatter_f024}
+    \includegraphics[height=0.2\textwidth]{ppscatter_f001}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f002}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f003}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f004}\\[-0.6em]
+    \includegraphics[height=0.2\textwidth]{ppscatter_f005}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f006}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f007}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f008}\\[-0.6em]
+    \includegraphics[height=0.2\textwidth]{ppscatter_f009}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f010}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f011}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f012}\\[-0.6em]
+    \includegraphics[height=0.2\textwidth]{ppscatter_f013}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f014}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f015}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f016}\\[-0.6em]
+    \includegraphics[height=0.2\textwidth]{ppscatter_f017}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f018}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f019}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f020}\\[-0.6em]
+    \includegraphics[height=0.2\textwidth]{ppscatter_f021}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f022}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f023}&
+    \includegraphics[height=0.2\textwidth]{ppscatter_f024}
 \end{tabular}
 \caption{\label{fig:scatterplots}
 \bbobppscatterlegend{$f_1$--$f_{24}$}
@@ -360,38 +336,38 @@ of overall function evaluations for any unsuccessful trial under consideration.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
- \begin{tabular}{l@{\hspace*{-0.025\textwidth}}l|l@{\hspace*{-0.025\textwidth}}l}
+ \begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
  \multicolumn{2}{c}{5-D} & \multicolumn{2}{c}{20-D} \\
- \rot{separable fcts}
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_05D_separ} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_05D_separ} &
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_20D_separ} &
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_20D_separ} \\
- \rot[2]{moderate fcts}
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_05D_lcond} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_05D_lcond} &
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_20D_lcond} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_20D_lcond}\\
- \rot[1.3]{ill-conditioned fcts}
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_05D_hcond} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_05D_hcond} &
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_20D_hcond} &
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_20D_hcond} \\
- \rot[1.6]{multi-modal fcts}
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_05D_multi} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_05D_multi} &
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_20D_multi} &
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_20D_multi} \\
- \rot[1.0]{weak structure fcts}
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_05D_mult2} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_05D_mult2} &
- \includegraphics[width=0.268\textwidth,trim=     0mm 0mm 0mm 15mm, clip]{pprldistr_20D_mult2} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_20D_mult2}\\
- \rot{all functions}
- \includegraphics[width=0.268\textwidth,trim=0cm 0mm 0mm 15mm, clip]{pprldistr_05D_noiselessall} & 
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_05D_noiselessall} &
- \includegraphics[width=0.268\textwidth,trim=0cm 0mm 0mm 15mm, clip]{pprldistr_20D_noiselessall} &
- \includegraphics[width=0.2375\textwidth,trim=2.3cm 0mm 0mm 15mm, clip]{pplogabs_20D_noiselessall}
+ \rot[2.9]{all functions}
+ \includegraphics[height=0.14\textheight]{pprldistr_05D_noiselessall} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_05D_noiselessall} &
+ \includegraphics[height=0.14\textheight]{pprldistr_20D_noiselessall} &
+ \includegraphics[height=0.14\textheight]{pplogabs_20D_noiselessall}\\
+ \rot[2.7]{separable fcts}
+ \includegraphics[height=0.14\textheight]{pprldistr_05D_separ} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_05D_separ} &
+ \includegraphics[height=0.14\textheight]{pprldistr_20D_separ} &
+ \includegraphics[height=0.14\textheight]{pplogabs_20D_separ} \\
+ \rot[2.75]{moderate fcts}
+ \includegraphics[height=0.14\textheight]{pprldistr_05D_lcond} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_05D_lcond} &
+ \includegraphics[height=0.14\textheight]{pprldistr_20D_lcond} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_20D_lcond}\\
+ \rot[1.4]{ill-conditioned fcts}
+ \includegraphics[height=0.14\textheight]{pprldistr_05D_hcond} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_05D_hcond} &
+ \includegraphics[height=0.14\textheight]{pprldistr_20D_hcond} &
+ \includegraphics[height=0.14\textheight]{pplogabs_20D_hcond} \\
+ \rot[2.1]{multi-modal fcts}
+ \includegraphics[height=0.14\textheight]{pprldistr_05D_multi} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_05D_multi} &
+ \includegraphics[height=0.14\textheight]{pprldistr_20D_multi} &
+ \includegraphics[height=0.14\textheight]{pplogabs_20D_multi} \\
+ \rot[1.4]{weak structure fcts}
+ \includegraphics[height=0.14\textheight]{pprldistr_05D_mult2} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_05D_mult2} &
+ \includegraphics[height=0.14\textheight]{pprldistr_20D_mult2} & 
+ \includegraphics[height=0.14\textheight]{pplogabs_20D_mult2}\\
  \end{tabular}
 \vspace*{-0.2cm}
  \caption{\label{fig:RLDs}
